--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>かっこいいホームページ</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #35424a;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #35424a;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        nav a:hover {
+            background-color: #e8491d;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #35424a;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
 
+<header>
+    <h1>かっこいいホームページ</h1>
+</header>
+
+<nav>
+    <a href="#home">ホーム</a>
+    <a href="#about">アバウト</a>
+    <a href="#services">サービス</a>
+    <a href="#contact">コンタクト</a>
+</nav>
+
+<main>
+    <section id="home">
+        <h2>ホーム</h2>
+        <p>ここにホームページの内容を追加します。</p>
+    </section>
+    <section id="about">
+        <h2>アバウト</h2>
+        <p>ここにアバウトの内容を追加します。</p>
+    </section>
+    <section id="services">
+        <h2>サービス</h2>
+        <p>ここにサービスの内容を追加します。</p>
+    </section>
+    <section id="contact">
+        <h2>コンタクト</h2>
+        <p>ここにコンタクトの内容を追加します。</p>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2023 かっこいいホームページ</p>
+</footer>
+
+</body>
+</html>
